Fixed names of functions in Containers.jsx. Added a missing border to docker-container.

--- a/webcenter-front/src/components/home/Containers.css
+++ b/webcenter-front/src/components/home/Containers.css
@@ -1,5 +1,6 @@
 #docker-container
 {
+    border-bottom: 2px solid var(--docker-containers-border-color);
     height: 15vh;
     width: 100%;
 }
